    forked, @dumping process are both actively querying the text value
    database, the sequence of lseek/read and lseek/write options
    intermix.  Since the file position state is shared between the
    child and parent process, it was possible for one process to read
    or write the wrote CHash page.  Instead of using lseek/read and
    lseek/write, MUX now either uses pread() and pwrite() or does not
    fork a child to performs the @dump/flat.
 -- The comsys loading procedure not removes references to GARBAGE.
    Previously, it would not add the GARBAGE to any channel, but as new
    objects are creates they would appear on channel at the next
    @restart.
 -- Fix @mail/purge bug where only the first cleared @mail item would
    be purged.


Performance Enhancements:
~~~~~~~~~~~~~~~~~~~~~~~~
 -- Re-worked update_quotas() so that mudstate.now could be removed.
 -- Use nanosleep() or usleep() on Unix if available.
 -- Pulled alloc/free pairs outside an inner loop in switch() and
    fold().
 -- Improve performance by avoiding write-through caching of A_MONEY in
    the player cache. This was probably the primary reason for needing
    one cached hash page per player. Paging is probably secondary to
    this one.


Cosmetic Changes:
~~~~~~~~~~~~~~~~
 -- Increased the space available to WHO for @moniker names to provide
    more room for more ANSI transitions.
 -- Remove references to have_macros in wizhelp.txt


Miscellaneous:
~~~~~~~~~~~~~
 -- Added ATTACK notes.
 -- Added @folder as an alias for @mail/folder and @file as an alias for
    @mail/file.
 -- Remove configure checks for mktime() and timelocal().
 -- Alierak removed the last two direct uses of delim_check in lnum()
    and lcmds().
 -- Alierak removed stale code in add_player_name() since disallowed
    names are stored separately.
 -- Alierak moved the login mail check into announce_connect() to
    clarify the purpose of record_login().